<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <!--textCursorDrawable光标颜色
        singleLine 禁止换行（一行）
        inputType限制输入类型
        -->
        <EditText
            android:id="@+id/edtxt_max"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/edtxt_max"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/btn_preinstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Preinstall"
            android:text="@string/btn_preinstall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spr_operationType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/spr_operationType" />

        <Spinner
            android:id="@+id/spr_operationMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/spr_operationMode" />

        <EditText
            android:id="@+id/editxt_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/editxt_count"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:text="30"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spr_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spr_negative">

        </Spinner>
        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Enter"
            android:text="@string/btn_enter" />
    </LinearLayout>
</LinearLayout>
